{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 181,
  "lineage": "8adc95f1-67fa-0575-5434-4d9f733ba2f9",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:security-group/sg-0de9c690045e3df36",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0de9c690045e3df36",
            "ingress": [],
            "name": "mineclifford-ci-eks-dA0JRPPT-cluster-2026030619171311750000000c",
            "name_prefix": "mineclifford-ci-eks-dA0JRPPT-cluster-",
            "owner_id": "317006682323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-eks-dA0JRPPT-cluster",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-eks-dA0JRPPT-cluster",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:security-group/sg-0d57be282f475c163",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0d57be282f475c163",
            "ingress": [],
            "name": "mineclifford-ci-eks-dA0JRPPT-node-2026030619171311760000000d",
            "name_prefix": "mineclifford-ci-eks-dA0JRPPT-node-",
            "owner_id": "317006682323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-eks-dA0JRPPT-node",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "owned"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-eks-dA0JRPPT-node",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3024955857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de9c690045e3df36",
            "security_group_rule_id": "sgr-086a3d672b7786eef",
            "self": false,
            "source_security_group_id": "sg-0d57be282f475c163",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1317984296",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-070a24662d49e4d73",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-286977756",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-09b008c580c158d11",
            "self": false,
            "source_security_group_id": "sg-0de9c690045e3df36",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3909695587",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-02fdfe3ededaf3329",
            "self": false,
            "source_security_group_id": "sg-0de9c690045e3df36",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-541810677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-035ef692fdea66382",
            "self": false,
            "source_security_group_id": "sg-0de9c690045e3df36",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-857170900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-0e75d922f4b04550f",
            "self": false,
            "source_security_group_id": "sg-0de9c690045e3df36",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1471565855",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-0c0e340d32cbe5627",
            "self": false,
            "source_security_group_id": "sg-0de9c690045e3df36",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1585631848",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-02870f7a147534eae",
            "self": false,
            "source_security_group_id": "sg-0de9c690045e3df36",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_minecraft_bedrock",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Minecraft Bedrock",
            "from_port": 19132,
            "id": "sgrule-1775690512",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-0943d1ab2eea473af",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 19132,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_minecraft_java",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Minecraft Java",
            "from_port": 25565,
            "id": "sgrule-3636922868",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-0525c78fa4e18a30d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 25565,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3921526254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-0627c86d2004a6581",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-147978574",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-08fd5f702a9fc7d83",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2895010465",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d57be282f475c163",
            "security_group_rule_id": "sgr-08289c7acdbd6ef76",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:network-acl/acl-0677cdbc7d6747445",
            "default_network_acl_id": "acl-0677cdbc7d6747445",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0677cdbc7d6747445",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "317006682323",
            "subnet_ids": [
              "subnet-02b07f633b81aacbb",
              "subnet-06ec5959e06582ff5",
              "subnet-0897365c2bb443d5f"
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-default",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-default",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:route-table/rtb-02151bb4439bcb8e7",
            "default_route_table_id": "rtb-02151bb4439bcb8e7",
            "id": "rtb-02151bb4439bcb8e7",
            "owner_id": "317006682323",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-default",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-default",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:security-group/sg-076f119790cc848b9",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-076f119790cc848b9",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "317006682323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-default",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-default",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097adbdfd43fb1ce4",
            "arn": "arn:aws:ec2:sa-east-1:317006682323:elastic-ip/eipalloc-097adbdfd43fb1ce4",
            "domain": "vpc",
            "id": "eipalloc-097adbdfd43fb1ce4",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-18-230-172-134.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.172.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-sa-east-1a",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-sa-east-1a",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:internet-gateway/igw-047d5838022c9e13a",
            "id": "igw-047d5838022c9e13a",
            "owner_id": "317006682323",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097adbdfd43fb1ce4",
            "association_id": "eipassoc-0a8f500862a585d07",
            "connectivity_type": "public",
            "id": "nat-0fbcabaaeda3529c9",
            "network_interface_id": "eni-089d156b7bc8a25ce",
            "private_ip": "10.0.4.124",
            "public_ip": "18.230.172.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0897365c2bb443d5f",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-sa-east-1a",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-sa-east-1a",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d127999c97948b931080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fbcabaaeda3529c9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d127999c97948b93",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-047d5838022c9e13a",
            "id": "r-rtb-04992d7036ea394f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04992d7036ea394f8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:route-table/rtb-0d127999c97948b93",
            "id": "rtb-0d127999c97948b93",
            "owner_id": "317006682323",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-private",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-private",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:route-table/rtb-04992d7036ea394f8",
            "id": "rtb-04992d7036ea394f8",
            "owner_id": "317006682323",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-public",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-public",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0729245c819aed1ab",
            "route_table_id": "rtb-0d127999c97948b93",
            "subnet_id": "subnet-003c8d6f80f3c6fc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069b5f32bd8beb4e0",
            "route_table_id": "rtb-0d127999c97948b93",
            "subnet_id": "subnet-06ec5959e06582ff5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e43d6de142089ed3",
            "route_table_id": "rtb-0d127999c97948b93",
            "subnet_id": "subnet-02b07f633b81aacbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085f238bca2ba2fff",
            "route_table_id": "rtb-04992d7036ea394f8",
            "subnet_id": "subnet-0897365c2bb443d5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b6b05b42b2065d1",
            "route_table_id": "rtb-04992d7036ea394f8",
            "subnet_id": "subnet-0755c70be3a118835"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afb2e07c0d92171f",
            "route_table_id": "rtb-04992d7036ea394f8",
            "subnet_id": "subnet-0c8f949c5704a76a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:subnet/subnet-003c8d6f80f3c6fc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003c8d6f80f3c6fc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317006682323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-private-sa-east-1a",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-private-sa-east-1a",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:subnet/subnet-06ec5959e06582ff5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ec5959e06582ff5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317006682323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-private-sa-east-1b",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-private-sa-east-1b",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:subnet/subnet-02b07f633b81aacbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b07f633b81aacbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317006682323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-private-sa-east-1c",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-private-sa-east-1c",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:subnet/subnet-0897365c2bb443d5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0897365c2bb443d5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317006682323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-public-sa-east-1a",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-public-sa-east-1a",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:subnet/subnet-0755c70be3a118835",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0755c70be3a118835",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317006682323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-public-sa-east-1b",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-public-sa-east-1b",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:subnet/subnet-0c8f949c5704a76a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8f949c5704a76a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317006682323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-public-sa-east-1c",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc-public-sa-east-1c",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-052f1ddeb207fe95f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:317006682323:vpc/vpc-052f1ddeb207fe95f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0677cdbc7d6747445",
            "default_route_table_id": "rtb-02151bb4439bcb8e7",
            "default_security_group_id": "sg-076f119790cc848b9",
            "dhcp_options_id": "dopt-08a09264e86b63f7c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-052f1ddeb207fe95f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02151bb4439bcb8e7",
            "owner_id": "317006682323",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "mineclifford-ci-vpc",
              "Orchestration": "kubernetes",
              "Owner": "minecraft",
              "Project": "mineclifford-ci",
              "ServerType": "FABRIC",
              "kubernetes.io/cluster/mineclifford-ci-eks-dA0JRPPT": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}